# excel-R-code-evaluator

./: .env  README.md  package.json
drizzle/: 0000_safe_donald_blake.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
python-backend/: README.md  database.py  main.py  models.py  pyproject.toml
src/app/: globals.css  page.tsx
src/app/api/feedback/: route.ts
src/components/tool/: Evaluator.tsx  ExcelViewer.tsx  REditor.tsx
src/db/: schema.ts
src/lib/: webr.ts
