[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedback-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
]

[tool.hatch.build.targets.wheel]
include = [
  "main.py",
  "database.py", 
  "models.py",
]